hdf5-derive/tests/compile-fail/enum-non-scalar.stderr
error: proc-macro derive panicked
 --> $DIR/enum-non-scalar.rs:4:10
  |
4 | #[derive(H5Type)]
  |          ^^^^^^
  |
  = help: message: H5Type can only be derived for enums with scalar discriminants
